<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="true_button">True</string>
    <string name="next_button">Next</string>
    <string name="back_button">Prev</string>
    <string name="false_button">False</string>
    <string name="correct_tst">Correct!</string>
    <string name="incorrect_tst">Incorrect!</string>
    <string name="question_oceans">The Pacific Ocean is Larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The Source of Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the loungest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
</resources>